<resources>
    <string name="app_name">Pals</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Contraseña (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="titulo">Pals!</string>
    <string name="subtitulo">Comparte experiencias</string>
    <string name="perfil">Mi perfil</string>
    <string name="misplanes">Mis planes</string>
    <string name="buscarPlanes">Buscar planes</string>
    <string name="signout">Cerrar sesión</string>
    <string name="nuevoPlan">Nuevo plan</string>
    <string name="inicio">Inicio</string>
    <string name="opciones">Opciones</string>
    <string name="nombre">Nombre</string>
    <string name="apellidos">Apellidos</string>
    <string name="fechaNac">Fecha de nacimiento</string>
    <string name="email">Email</string>
    <string name="pass">Contraseña</string>
    <string name="reg">Registrar</string>
    <string name="login">Iniciar sesión</string>
    <string name="planmio">Planes propuestos por mi</string>
    <string name="planotro">Planes a los que asistir</string>
    <string name="planescercanos">Planes denunciados</string>
    <string name="recomendados">Recomendados</string>
    <string name="filtro">Filtro</string>
    <string name="ciudad">Ciudad</string>
    <string name="tipo">Tipo</string>
    <string name="musica">Música</string>
    <string name="cine">Cine</string>
    <string name="freak">Freak</string>
    <string name="cultura">Cultura</string>
    <string name="turismo">Turismo</string>
    <string name="deporte">Deportes</string>
    <string name="otros">Otros</string>
    <string name="fiesta">Fiesta</string>
    <string name="titulopub">Título de la publicación</string>
    <string name="lugar">Lugar</string>
    <string name="hora">Hora</string>
    <string name="descripción">Descripción</string>
    <string name="imagen">Imagen</string>
    <string name="maxuser">Máximo de participantes</string>
    <string name="fecha">Fecha</string>
    <string name="inscritos">Participantes inscritos</string>
    <string name="chat">Chat</string>
    <string name="publicar">Publicar</string>
    <string name="cancelar">Cancelar</string>
    <string name="modificar">Modificar</string>
    <string name="guardar">Guardar</string>
    <string name="fin">Finalizar registro</string>
    <string name="meapunto">¡Me apunto!</string>
    <string name="dejardeparticipar">Ya no quiero ir</string>
    <string name="segurodejar">¿Estás seguro de no querer ir?</string>
    <string name="si">Si</string>
    <string name="no">No</string>
    <string name="eliminado">Has sido eliminado de la lista de participantes</string>
    <string name="agregar">Te has apuntado al plan. ¡Accede al chat y habla con los participantes!</string>
    <string name="notificaciones">Activar notificaciones</string>
    <string name="vibracion">Vibración</string>
    <string name="miubicacion">Mi ubicacion</string>
    <string name="crearPlan">Crear nuevo plan</string>
    <string name="eliminarplan">Eliminar</string>
    <string name="seguroeliminar">¿Estás seguro de querer eliminar el plan? Quedará en estado "cerrado" y no será posible su modificación</string>
    <string name="todos">Planes a los que voy</string>
    <string name="user">Usuario</string>
    <string name="seleccionatipo">Selecciona el tipo de plan</string>
    <string name="enviar">Enviar</string>
    <string name="abandonar">Abandonar chat</string>
    <string name="not_ok">¡Un usuario nuevo se ha apuntado a uno de tus planes!</string>
    <string name="seleccionarfecha">Seleccionar fecha</string>
    <string name="indiferente">Indiferente</string>
    <string name="editar">Editar</string>
    <string name="sobreti">¡Escribe algo sobre ti!</string>
    <string name="cambiarfoto">Cambiar foto</string>
    <string name="noticias">Noticias</string>
    <string name="creador">Creador: </string>
    <string name="apuntados">Cantidad de usuarios que participan: </string>
    <string name="publicarplan">¡Publicar plan!</string>
    <string name="repite">Repite la contraseña</string>
    <string name="ok">Ok</string>
    <string name="publicarNoticia">Publicar noticia</string>
    <string name="contenido">Contenido</string>
    <string name="mensaje">Escribe aqui</string>
    <string name="basededatos">Base de datos</string>
    <string name="banner_ad_unit_id">ca-app-pub-6032187278566198/3900378804</string>
    <string name="nochat">Ahora no</string>
    <string name="sichat">Acceder al chat</string>
    <string name="borrarcerrados">Se van a borrar los planes en estado cerrado. ¿Continuar?</string>
    <string name="filtrotipo">Filtrar por tipo</string>
    <string name="filtroprovincia">Filtrar por provincia</string>
    <string name="confirmarcerrados">Se han borrado todos los planes cerrados</string>
    <string name="mensajevacio">Mensaje sin texto</string>
    <string name="errorregistro">Error al registrar al usuario</string>
    <string name="errorlogeo">Error al loguear</string>
    <string name="enterpass">Introduce usuario y contraseña</string>
    <string name="vibrasi">Vibracion activada</string>
    <string name="vibrano">Vibracion desactivada</string>
    <string name="sonino">Sonido desactivado</string>
    <string name="sonisi">Sonido activado</string>
    <string name="notisi">Notificaciones activadas</string>
    <string name="notino">Notificaciones desactivadas</string>
    <string name="noemail">No tienes clientes de email instalados</string>
    <string name="crearno">No ha sido posible crear el plan</string>
    <string name="titulomal">El titulo debe tener entre 3 y 50 caracteres</string>
    <string name="lugarmal">El lugar debe tener entre 3 y 50 caracteres</string>
    <string name="infomal">Introduce información, minimo 10 caracteres</string>
    <string name="planok">Plan creado correctamente</string>
    <string name="noticiabien">Noticia publicada con exito</string>
    <string name="noticiamal">Error al publicar la noticia</string>
    <string name="infonoticiamal">Introduce contenido, minimo 50 caracteres</string>
    <string name="usuariook">Usuario registrado con éxito</string>
    <string name="usuarionook">No ha sido posible registrar al usuario</string>
    <string name="emailrepetido">Email utilizado por otro usuario</string>
    <string name="emailno">Formato email no valido</string>
    <string name="passmal">Las contraseñas no coinciden</string>
    <string name="passminimo">Contraseña minimo 6 caracteres</string>
    <string name="nombreminimo">Nombre entre 3 y 15 caracteres</string>
    <string name="planescerrados">Planes cerrados</string>
    <string name="borrartodos">Borrar todos</string>
    <string name="sonido">Sonido</string>
    <string name="administrador">Contacta con el administrador</string>
    <string name="arrepentido">¿Arrepentido?</string>
    <string name="otrasopciones">Otras opciones</string>
    <string name="ayudaalta">Para dar de alta un plan, abre el menú lateral desde la pantalla de noticias y selecciona “Nuevo plan”. Elige el tipo de plan y después, ponle un nombre y una ubicación. Si pulsas sobre el mapa podrás buscar la ubicación perfecta.  Por último, selecciona una fecha si es necesario y una descripción. ¡Recuerda que cuanto mejor lo describas más participantes tendrás!</string>
    <string name="ayudaborrar">Si has creado un plan y te has arrepentido, desde la pantalla de noticias abre el menú lateral y selecciona “Mis planes”. En la sección “Planes creados por mi”, toca sobre el plan que quieres borrar. Después de la descripción tienes las opciones de gestión de plan. Pulsa sobre el botón borrar y tu plan quedará cerrado. </string>
    <string name="ayudaapuntarse">Busca el plan que más te interese, tras la descripción del plan, en las opciones, pulsa sobre el botón ¡Me apunto! Y estarás dentro. Recuerda que puedes acceder al chat del plan desde esa misma pantalla. </string>
    <string name="ayudachat">Busca el plan que te interese, tras la descripción del plan, en las opciones, debe aparecer el botón de chat. ¿No te aparece? Es que no te has apuntado a ese plan, dale a ¡Me apunto! Y debe aparecer el botón. </string>
    <string name="ayudanotificaciones">En el menú lateral, selecciona opciones. Desde esta sección puedes desactivar las notificaciones, el sonido y la vibración. </string>
    <string name="ayudabaja">Para darse de baja de la aplicación, en el menú lateral selecciona opciones. En esta sección dale al botón “Ponerse en contacto con el administrador”. En el email, especifica como concepto Baja pals e incluye tu la dirección de correo con la que te diste de alta. Tu baja será procesada por el administrador. </string>
    <string name="ayudamodificar">¿Has creado un plan y quieres cambiar algo? Pals! No permite la modificación de los planes por el usuario, pero se lo puedes solicitar a nuestro administrador. En el menú lateral selecciona opciones y pulsa el botón “Ponerse en contacto con el administrador”. En el email especifica como concepto “Modificación de plan” e incluye un email, el titulo del plan y las modificaciones a realizar. </string>

</resources>
