<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:isScrollContainer="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/ivImagen"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@drawable/side_nav_bar"
                app:srcCompat="@drawable/user" />

            <Button
                android:id="@+id/botonCambiar"
                android:layout_width="match_parent"
                android:layout_height="22dp"
                android:background="@drawable/burbuja"
                android:onClick="cambiarFoto"
                android:text="@string/cambiarfoto" />

            <TextView
                android:id="@+id/tvCreador"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilnombre"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:textColorHint="@color/primaryColor">

                <EditText
                    android:id="@+id/etNombre"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginBottom="15dp"
                    android:ems="10"
                    android:hint="@string/nombre"
                    android:inputType="text"

                    android:singleLine="true"
                    android:textColorHint="@color/primaryDarkColor"
                    android:textSize="14sp" />

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilemail"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:textColorHint="@color/primaryColor">

                <EditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginBottom="15dp"
                    android:ems="10"

                    android:hint="@string/email"
                    android:inputType="text"
                    android:singleLine="true"
                    android:textColorHint="@color/primaryDarkColor"
                    android:textSize="14sp" />

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/fecha"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginBottom="15dp"
                    android:enabled="true"
                    android:text="@string/fechaNac" />

                <Button
                    android:id="@+id/etFecha"
                    android:layout_width="186dp"
                    android:layout_height="28dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginBottom="15dp"
                    android:background="@drawable/burbuja"
                    android:ems="10"
                    android:enabled="false"
                    android:gravity="center"
                    android:inputType="textPersonName"
                    android:text="Sin determinar" />
            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilinformacion"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginBottom="15dp"
                android:textColorHint="@color/primaryColor"
                app:counterMaxLength="50">

                <EditText
                    android:id="@+id/etDescripcion"

                    android:layout_width="match_parent"
                    android:layout_height="131dp"
                    android:cursorVisible="true"
                    android:ems="10"
                    android:fallbackLineSpacing="true"
                    android:gravity="top|left"
                    android:hint="@string/sobreti"
                    android:inputType="textMultiLine"
                    android:lines="5"
                    android:scrollHorizontally="true"
                    android:singleLine="false"
                    android:textColorHint="@color/primaryColor"
                    android:textSize="14sp" />

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/botonEditar"
                    android:layout_width="150dp"
                    android:layout_height="25dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginEnd="15dp"
                    android:background="@color/primaryLightColor"
                    android:onClick="editarPerfil"
                    android:text="@string/editar"
                    android:textColor="@color/quantum_amber400" />

                <Button
                    android:id="@+id/botonGuardar"
                    android:layout_width="155dp"
                    android:layout_height="25dp"
                    android:layout_marginBottom="15dp"

                    android:background="@color/primaryLightColor"
                    android:text="@string/guardar"
                    android:textColor="@color/quantum_amber400"
                    tools:layout_editor_absoluteX="152dp"
                    tools:layout_editor_absoluteY="646dp" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</android.support.constraint.ConstraintLayout>