<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/places_text_white_alpha_87"
    tools:context=".Registrar">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="15dp"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/ivRandom"
                android:layout_width="418dp"
                android:layout_height="115dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

            <TextView
                android:id="@+id/tvRegistro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:gravity="center"
                android:text="Registrar nuevo usuario"
                android:textColorHint="@color/primaryColor"
                android:textSize="18sp" />


            <EditText
                android:id="@+id/etNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:hint="@string/nombre"
                android:inputType="text"
                android:textColorLink="@color/quantum_amber400"
                android:textSize="12sp" />


            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColorLink="@color/quantum_amber400"
                android:textSize="12sp" />


            <EditText
                android:id="@+id/etPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:hint="@string/pass"
                android:inputType="textPassword"
                android:textColorLink="@color/quantum_amber400"
                android:textSize="12sp" />



            <Button
                android:id="@+id/botonGuardar"
                android:layout_width="match_parent"
                android:layout_height="29dp"
                android:layout_margin="20dp"
                android:layout_marginBottom="15dp"
                android:background="@color/primaryLightColor"
                android:onClick="validarCrearUsuario"
                android:text="@string/guardar"
                android:textColor="@color/quantum_amber400" />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>