<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GestionBD">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvPlanesCerrados"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/quantum_amber400"
                android:text="@string/planescerrados" />

            <ImageView
                android:id="@+id/ivSinPlanes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:visibility="invisible" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rvPlanes"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="15dp">

            </android.support.v7.widget.RecyclerView>

            <Button
                android:id="@+id/botonBorrar"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_marginBottom="20dp"
                android:background="@color/primaryColor"
                android:onClick="borrarPlanesCerrados"
                android:text="@string/borrartodos"
                android:textColor="@color/quantum_amberA400" />

            <TextView
                android:id="@+id/tvPlanesDenunciados"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:background="@color/quantum_amber400"
                android:text="@string/planescercanos" />

            <ImageView
                android:id="@+id/ivSinPlanes2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:visibility="invisible" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rvDenunciados"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="15dp">

            </android.support.v7.widget.RecyclerView>

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>