<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PublicarNoticia">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <ImageView
            android:id="@+id/ivImagen"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:onClick="cambiarFoto"
            app:srcCompat="@drawable/foto" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tiltitulo"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_marginBottom="18dp"
                android:hint="@string/titulopub"
                android:textColorHint="@color/primaryColor">

                <EditText
                    android:id="@+id/etTitulo"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_margin="10dp"
                    android:layout_marginBottom="25dp"
                    android:ems="10"
                    android:inputType="text|textCapSentences"
                    android:singleLine="true"
                    android:textSize="18sp" />
            </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilcontenido"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_marginBottom="18dp"
            android:textColorHint="@color/primaryColor">

            <EditText
                android:id="@+id/etContenido"
                android:layout_width="match_parent"
                android:layout_height="249dp"
                android:layout_margin="10dp"
                android:layout_marginBottom="25dp"
                android:ems="10"
                android:gravity="left"
                android:hint="@string/contenido"
                android:inputType="textMultiLine|textCapSentences"
                android:singleLine="false"
                android:textSize="18sp" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/botonPublicar"
            android:layout_width="match_parent"
            android:layout_height="29dp"
            android:layout_margin="10dp"
            android:layout_marginBottom="25dp"
            android:background="@color/primaryColor"
            android:onClick="publicarNoticia"
            android:text="@string/publicarNoticia"
            android:textColor="@color/quantum_amber400" />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>